<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/myProfile"
            android:icon="@drawable/ic_profile"
            android:title="@string/myProfile" />

        <item
            android:id="@+id/favoriteRestaurant"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favoriteRestaurant" />

        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />

    </group>
</menu>
