<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.FaqFragment"
    android:background="@color/White">


    <TextView
        android:id="@+id/fragmetFaq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/faqs"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/que1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fragmetFaq"
        android:padding="10dp"
        android:text="@string/que1"
        android:textColor="@color/OrangeRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ans1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/ans1"
        android:textColor="@color/Black"
        android:layout_below="@+id/que1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/que2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ans1"
        android:padding="10dp"
        android:text="@string/que2"
        android:textColor="@color/OrangeRed"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ans2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/ans2"
        android:textColor="@color/Black"
        android:layout_below="@+id/que2"
        android:textSize="18sp" />


</RelativeLayout>