<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.activity.LoginActivity"
    android:background="@color/Gray">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:src="@drawable/foodiction" />

    <EditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginImage"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/mobile"
        android:inputType="phone"
        android:maxLength="10"
        android:textColorHint="#C0C0C0" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobile"
        android:layout_marginStart="15sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="15sp"
        android:layout_marginBottom="15sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:textColorHint="#C0C0C0" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="#FF03DAC5"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_below="@id/etPassword"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot"
        android:textColor="@color/Black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Black"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />


</RelativeLayout>